Metadata/objects/Payment__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account/Customer who has made this Payment</description>
        <inlineHelpText>The Account/Customer who has made this Payment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <description>The Amount that has already been Allocated.</description>
        <inlineHelpText>The Amount that has already been Allocated.</inlineHelpText>
        <label>Allocated Amount</label>
        <summarizedField>Payment_Allocation__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Allocation__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Allocation__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The payment Currency</description>
        <inlineHelpText>The payment Currency</inlineHelpText>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Applied__c</fullName>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is selected on creation of Payment,allocation is done automatically</description>
        <inlineHelpText>If this is selected on creation of Payment,allocation is done automatically</inlineHelpText>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Invoice__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Invoice__c.CurrencyL__c</field>
                <operation>equals</operation>
                <valueField>$Source.Currency__c</valueField>
            </filterItems>
            <filterItems>
                <field>Invoice__c.Invoice_State__c</field>
                <operation>notEqual</operation>
                <value>Proforma</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally choose the Contact who made this Payment. This Contact must belong to the same Account.</description>
        <inlineHelpText>Optionally choose the Contact who made this Payment. This Contact must belong to the same Account.</inlineHelpText>
        <label>Paid by</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can choose a contact that belongs to the same account as the payment.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Choose the contact who made this payment. This contact must belong to the same account as the payment.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Created_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Created From</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments (Payment Created From)</relationshipLabel>
        <relationshipName>Payment_Created_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The Date on which  this Payment was made.</description>
        <inlineHelpText>The Date on which  this Payment was made.</inlineHelpText>
        <label>Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Description__c</fullName>
        <label>Payment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Credit Invoice</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <label>Refunded Amount</label>
        <summarizedField>Refund_Line__c.Refund_Amount__c</summarizedField>
        <summaryForeignKey>Refund_Line__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initiated</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#78C953</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unallocated_Amount__c</fullName>
        <description>The amount that is un-allocated and can be used.</description>
        <formula>IF( ISPICKVAL(Status__c, &apos;Cancelled&apos;), 0, Amount__c  -  Allocated_Amount__c -  Refunded_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount that is un-allocated and can be used.</inlineHelpText>
        <label>Unallocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All_Payments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Paid_by__c</columns>
        <columns>Amount__c</columns>
        <columns>Currency__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Allocated_Amount__c</columns>
        <columns>Unallocated_Amount__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Payments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cancelled_Payments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Paid_by__c</columns>
        <columns>Amount__c</columns>
        <columns>Currency__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Allocated_Amount__c</columns>
        <columns>Unallocated_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cancelled Payments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Payments</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Paid_by__c</columns>
        <columns>Amount__c</columns>
        <columns>Currency__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Allocated_Amount__c</columns>
        <columns>Unallocated_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Payments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_status_from_Cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE
(Status__c), 
&quot;Cancelled&quot;) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You cannot change the status of a cancelled payment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_the_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Amount__c )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>You cannot change the amount of payments. Alternately you can cancel this payment and create a new payment with a different amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cheque_Details_valid_for_cheque_payments</fullName>
        <active>true</active>
        <description>The cheque details can be populated only for cheque payments</description>
        <errorConditionFormula>AND(!ISPICKVAL( Payment_Type__c , &quot;Cheque&quot;), OR( Cheque_Number__c != Null,  Cheque_Date__c  != null,  Bank_Name__c != null))</errorConditionFormula>
        <errorMessage>Cheque Number, Cheque Date and Bank Name can be populated only for the payment type &quot;Cheque&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cheque_Number_Req_For_Cheque_Payment</fullName>
        <active>true</active>
        <description>Cheque Number Required For Cheque Payment</description>
        <errorConditionFormula>IF( (ISPICKVAL( Payment_Type__c , &quot;Cheque&quot;)) &amp;&amp; (Cheque_Number__c == null) , true, false)</errorConditionFormula>
        <errorDisplayField>Cheque_Number__c</errorDisplayField>
        <errorMessage>Enter the Cheque number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Status_should_be_posted</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Invoice__c != NULL), !(ISPICKVAL(Invoice__r.Invoice_Status__c, &apos;Posted&apos;)),ISNEW())</errorConditionFormula>
        <errorDisplayField>Invoice__c</errorDisplayField>
        <errorMessage>You can select only posted invoices</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Amount_Validation</fullName>
        <active>true</active>
        <description>You cannot create payment if the payment amount is greater than invoice unpaid amount</description>
        <errorConditionFormula>AND((Invoice__c != NULL),(Invoice__r.Order__r.Payment_Plan__c == NULL),(Amount__c &gt; Invoice__r.Unpaid_Amount__c), ISNEW() )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Please make sure that  payment amount should be less than or equal to invoice unpaid amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_status_cannot_be_Cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()  &amp;&amp;  ISPICKVAL(Status__c, &quot;Cancelled&quot;)</errorConditionFormula>
        <errorMessage>You cannot insert the payment status as Cancelled</errorMessage>
    </validationRules>
</CustomObject>